@@ -24,10 +24,10 @@ Naming Conventions
 """
 
 import sys
-def function_name(): return sys._getframe(1).f_code.co_name
+def _fn_name(): return sys._getframe(1).f_code.co_name
 
 from matplotlib import verbose
-from matplotlib.numerix import asarray #, fromstring, UInt8, zeros, where, transpose, nonzero, indices, ones, nxfrom matplotlib._matlab_helpers import Gcf
+from matplotlib.numerix import asarray, pi #, fromstring, UInt8, zeros, where, transpose, nonzero, indices, ones, nxfrom matplotlib._matlab_helpers import Gcf
 from matplotlib.backend_bases import RendererBase, GraphicsContextBase,\
      FigureManagerBase, FigureCanvasBase, error_msg
 from matplotlib.cbook import enumerate, True, False
@@ -55,7 +55,7 @@ def error_msg_cairo(msg, *args):
     """
     Signal an error condition -- in a GUI, popup a error dialog
     """
-    if Debug: print 'backend_cairo.%s()' % function_name()
+    if Debug: print 'backend_cairo.%s()' % _fn_name()
     verbose.report('Error: %s'%msg)
     sys.exit()
 
@@ -65,9 +65,35 @@ class RendererCairo(RendererBase):
     The renderer handles all the drawing primitives using a graphics
     context instance that controls the colors/styles
     """
+    fontweights = {
+        100          : cairo.FONT_WEIGHT_NORMAL,
+        200          : cairo.FONT_WEIGHT_NORMAL,
+        300          : cairo.FONT_WEIGHT_NORMAL,
+        400          : cairo.FONT_WEIGHT_NORMAL,
+        500          : cairo.FONT_WEIGHT_NORMAL,
+        600          : cairo.FONT_WEIGHT_BOLD,
+        700          : cairo.FONT_WEIGHT_BOLD,
+        800          : cairo.FONT_WEIGHT_BOLD,
+        900          : cairo.FONT_WEIGHT_BOLD,
+        'ultralight' : cairo.FONT_WEIGHT_NORMAL,
+        'light'      : cairo.FONT_WEIGHT_NORMAL,
+        'normal'     : cairo.FONT_WEIGHT_NORMAL,
+        'medium'     : cairo.FONT_WEIGHT_NORMAL,
+        'semibold'   : cairo.FONT_WEIGHT_BOLD,
+        'bold'       : cairo.FONT_WEIGHT_BOLD,
+        'heavy'      : cairo.FONT_WEIGHT_BOLD,
+        'ultrabold'  : cairo.FONT_WEIGHT_BOLD,
+        'black'      : cairo.FONT_WEIGHT_BOLD,
+                   }
+    fontangles = {
+        'italic'  : cairo.FONT_SLANT_ITALIC,
+        'normal'  : cairo.FONT_SLANT_NORMAL,
+        'oblique' : cairo.FONT_SLANT_OBLIQUE,
+        }
+    
 
     def __init__(self, surface, width, height, dpi):
-        if Debug: print 'backend_cairo.RendererCairo.%s()' % function_name()
+        if Debug: print 'backend_cairo.RendererCairo.%s()' % _fn_name()
         self.surface = surface
         self.width   = width
         self.height  = height
@@ -76,17 +102,37 @@ class RendererCairo(RendererBase):
 
     def get_canvas_width_height(self):
         'return the canvas width and height in display coords'
-        if Debug: print 'backend_cairo.RendererCairo.%s()' % function_name()
+        if Debug: print 'backend_cairo.RendererCairo.%s()' % _fn_name()
         return self.width, self.height
     
+
+    def get_text_scale(self):
+        """
+        Return the scale factor for fontsize taking screendpi and pixels per
+        inch into account
+        """
+        # copied from backend_gtk, is this needed for Cairo?
+        return self.dpi.get()/PIXELS_PER_INCH
+
 
     def get_text_width_height(self, s, prop, ismath):
         """
         get the width and height in display coords of the string s
         with FontPropertry prop
         """
-        if Debug: print 'backend_cairo.RendererCairo.%s()' % function_name()
-        return 1,1
+        if Debug: print 'backend_cairo.RendererCairo.%s()' % _fn_name()
+        # if ismath:  # do later
+
+        ctx = cairo.Context() # later - save a ctx specifically for this op?
+        ctx.select_font (prop.get_name(),
+                         self.fontangles [prop.get_style()],
+                         self.fontweights[prop.get_weight()])
+        scale = self.get_text_scale()
+        size  = prop.get_size_in_points()
+        ctx.scale_font (scale*size)
+        
+        w, h = ctx.text_extents (s)[2:4]
+        return w, h
 
                               
     def draw_arc(self, gcEdge, rgbFace, x, y, width, height, angle1, angle2):
@@ -94,12 +140,25 @@ class RendererCairo(RendererBase):
         Draw an arc centered at x,y with width and height and angles
         from 0.0 to 360.0.
 
-        If rgbFace is not None, fill the rectangle with it.  gcEdge
+        If rgbFace is not None, fill the arc with it.  gcEdge
         is a GraphicsContext instance
         """
-        if Debug: print 'backend_cairo.RendererCairo.%s()' % function_name()
-        pass
+        if Debug: print 'backend_cairo.RendererCairo.%s()' % _fn_name()
+        # cairo draws circular arcs (width=height) only?
+        ctx = gcEdge.ctx
+        y = self.height - y
+        radius = width / 2
 
+        if rgbFace:
+            color_save = ctx.rgb_color
+            ctx.set_rgb_color (*rgbFace)
+            ctx.arc (x, y, radius, angle1 * pi/180.0, angle2 * pi/180.0)
+            ctx.fill()
+            ctx.set_rgb_color (*color_save)
+            
+        ctx.arc (x, y, radius, angle1 * pi/180.0, angle2 * pi/180.0)
+        ctx.stroke()
+    
     
     def draw_image(self, x, y, im, origin, bbox):
         """
@@ -114,15 +173,16 @@ class RendererCairo(RendererBase):
         bbox is a matplotlib.transforms.BBox instance for clipping, or
         None
         """
-        if Debug: print 'backend_cairo.RendererCairo.%s()' % function_name()
+        if Debug: print 'backend_cairo.RendererCairo.%s()' % _fn_name()
         pass
+        # how does cairo do this?
     
 
     def draw_line(self, gc, x1, y1, x2, y2):
         """
         Draw a single line from x1,y1 to x2,y2
         """
-        if Debug: print 'backend_cairo.RendererCairo.%s()' % function_name()
+        if Debug: print 'backend_cairo.RendererCairo.%s()' % _fn_name()
         ctx = gc.ctx
         y1 = self.height - y1
         y2 = self.height - y2
@@ -135,7 +195,7 @@ class RendererCairo(RendererBase):
         x and y are equal length arrays, draw lines connecting each
         point in x, y
         """
-        if Debug: print 'backend_cairo.RendererCairo.%s()' % function_name()
+        if Debug: print 'backend_cairo.RendererCairo.%s()' % _fn_name()
         ctx = gc.ctx
         y = [self.height - y for y in y]
         points = zip(x,y)
@@ -151,8 +211,11 @@ class RendererCairo(RendererBase):
         """
         Draw a single point at x,y
         """
-        if Debug: print 'backend_cairo.RendererCairo.%s()' % function_name()
-        pass
+        if Debug: print 'backend_cairo.RendererCairo.%s()' % _fn_name()
+        # render by drawing a 0.5 radius circle
+        y = self.height - y
+        ctx.arc (x, y, 0.5, 0, 2*pi)
+        ctx.fill()
 
 
     def draw_polygon(self, gcEdge, rgbFace, points):
@@ -163,7 +226,7 @@ class RendererCairo(RendererBase):
         If rgbFace is not None, fill the rectangle with it.  gcEdge
         is a GraphicsContext instance
         """  
-        if Debug: print 'backend_cairo.RendererCairo.%s()' % function_name()
+        if Debug: print 'backend_cairo.RendererCairo.%s()' % _fn_name()
         ctx = gcEdge.ctx
         points = [(x, (self.height-y)) for x,y in points]
 
@@ -195,7 +258,7 @@ class RendererCairo(RendererBase):
         Draw a filled rectangle within it of color rgbFace, if rgbFace is not
         None.
         """
-        if Debug: print 'backend_cairo.RendererCairo.%s()' % function_name()
+        if Debug: print 'backend_cairo.RendererCairo.%s()' % _fn_name()
         ctx = gcEdge.ctx
         y = self.height - y - height
 
@@ -215,46 +278,30 @@ class RendererCairo(RendererBase):
         Render the matplotlib.text.Text instance at x, y in window
         coords using GraphicsContext gc
         """
-        if Debug: print 'backend_cairo.RendererCairo.%s()' % function_name()
+        if Debug: print 'backend_cairo.RendererCairo.%s()' % _fn_name()
         ctx = gc.ctx
 
-        if angle not in (0,90):
-            verbose.report_error('Text at angles not implemented yet')
-
-        elif ismath:
+        if ismath:
             verbose.report_error('Mathtext not implemented yet')
             #self._draw_mathtext(gc, x, y, s, prop, angle)
-
-        elif angle==90:
-            verbose.report_error('Text at angles not implemented yet')
-            #self._draw_rotated_text(gc, x, y, s, prop, angle)
-
         else:
-            #layout = self.get_pango_layout(s, prop)
-            #inkRect, logicalRect = layout.get_pixel_extents()
-            #l, b, w, h = inkRect
-            #self.gdkDrawable.draw_layout(gc.gdkGC, x=x, y=y-h-b,
-            #                             layout=layout)
-
-            
-            #print 's:', s
-            #print 'prop:', prop
-            #print 'dir(prop):', dir(prop)
-            #print 'angle', angle
-            #print 'prop.name', prop.get_name()
-
-            ctx.select_font ('sans-serif')
-            ctx.scale_font (14)  # manually sized to match MyGraph
-            # implement get_pango_layout(s, prop)
-            (x2, y2, text_width, text_height, dx, dy) = ctx.text_extents(s)
-            #ctx.move_to (x, y-text_height)
+            # see also get_text_width_height()
+            # text is looking too small - size, scale problem?
+            ctx.select_font (prop.get_name(),
+                             self.fontangles [prop.get_style()],
+                             self.fontweights[prop.get_weight()])
+            scale = self.get_text_scale()
+            size  = prop.get_size_in_points()
+            ctx.scale_font (scale*size)
             ctx.move_to (x, y)
+            if angle: # rotated text looks awful!
+                ctx.rotate (-angle * pi / 180)
             ctx.show_text (s)
 
          
     def flipy(self):
         """return true if y small numbers are top for renderer"""
-        if Debug: print 'backend_cairo.RendererCairo.%s()' % function_name()
+        if Debug: print 'backend_cairo.RendererCairo.%s()' % _fn_name()
         return True
 
     
@@ -262,7 +309,7 @@ class RendererCairo(RendererBase):
         """
         Return an instance of a GraphicsContextCairo
         """
-        if Debug: print 'backend_cairo.RendererCairo.%s()' % function_name()
+        if Debug: print 'backend_cairo.RendererCairo.%s()' % _fn_name()
         gc = GraphicsContextCairo (renderer=self)
         if self.surface:
             gc.ctx.set_target_surface (self.surface)
@@ -276,7 +323,7 @@ class RendererCairo(RendererBase):
         """
         Convert points to display units.
         """
-        if Debug: print 'backend_cairo.RendererCairo.%s()' % function_name()
+        if Debug: print 'backend_cairo.RendererCairo.%s()' % _fn_name()
         # should not need points_to_pixels() ? Cairo is device independent
         return points * PIXELS_PER_INCH/72.0 * self.dpi.get()/72.0
 
@@ -397,7 +444,7 @@ def draw_if_interactive():
     This should be overriden in a windowing environment if drawing
     should be done in interactive python mode
     """
-    if Debug: print 'backend_cairo.%s()' % function_name()
+    if Debug: print 'backend_cairo.%s()' % _fn_name()
     pass
 
 
@@ -408,7 +455,7 @@ def show():
     a do nothing func.  See the GTK backend for an example of how to
     handle interactive versus batch mode
     """
-    if Debug: print 'backend_cairo.%s()' % function_name()
+    if Debug: print 'backend_cairo.%s()' % _fn_name()
     for manager in Gcf.get_all_fig_managers():
         manager.canvas.realize()
 
@@ -417,7 +464,7 @@ def new_figure_manager(num, *args, **kwargs):
     """
     Create a new figure manager instance
     """
-    if Debug: print 'backend_cairo.%s()' % function_name()
+    if Debug: print 'backend_cairo.%s()' % _fn_name()
     thisFig = Figure(*args, **kwargs)
     canvas = FigureCanvasCairo(thisFig)
     manager = FigureManagerCairo(canvas, num)
@@ -438,7 +485,7 @@ class FigureCanvasCairo(FigureCanvasBase):
         """
         Draw the figure using the renderer
         """
-        if Debug: print 'backend_cairo.FigureCanvasCairo%s()' % function_name()
+        if Debug: print 'backend_cairo.FigureCanvasCairo%s()' % _fn_name()
         pass
         #renderer = RendererCairo()  # height, width, figure.dpi
         #self.figure.draw(renderer)
@@ -452,7 +499,7 @@ class FigureCanvasCairo(FigureCanvasBase):
         gray figure face color background and you'll probably want to
         override this on hardcopy
         """
-        if Debug: print 'backend_cairo.FigureCanvasCairo%s()' % function_name()
+        if Debug: print 'backend_cairo.FigureCanvasCairo%s()' % _fn_name()
         # set the new parameters
         origDPI       = self.figure.dpi.get()
         origfacecolor = self.figure.get_facecolor()
@@ -465,7 +512,7 @@ class FigureCanvasCairo(FigureCanvasBase):
 
         l,b,width, height = self.figure.bbox.get_bounds()
         renderer = RendererCairo (None, height, width, self.figure.dpi)
-        #ctx.set_target_png ( FILE *file, cairo_format_t format, width, height)
+        #ctx.set_target_png ( FILE *file, cairo_format_t format, width, height) - not wrapped?
 
         # 1 draw to an image, -> save image as a file
         # 2 or draw direct to a (png) file
@@ -473,7 +520,7 @@ class FigureCanvasCairo(FigureCanvasBase):
         self.figure.draw(renderer)
         # do something to save to hardcopy
 
-        print 'saving hardcopy'
+        print 'saving hardcopy, not implemented yet'
 
         # restore the new params and redraw the screen if necessary
         self.figure.dpi.set(origDPI)
@@ -487,7 +534,7 @@ class FigureCanvasCairo(FigureCanvasBase):
         This method will be called when the system is ready to draw,
         eg when a GUI window is realized
         """
-        if Debug: print 'backend_cairo.FigureCanvasCairo%s()' % function_name()
+        if Debug: print 'backend_cairo.FigureCanvasCairo%s()' % _fn_name()
         self._isRealized = True  
         self.draw()
 
